Updated with real resume info.

--- a/.wiki.md
+++ b/.wiki.md
@@ -1,11 +1,12 @@
 # Project Summary
-The project is an animated portfolio website designed to showcase the creative work of Alex Chen. It features a modern neumorphism design, emphasizing interactivity and smooth animations. The website includes various sections such as a Hero section for introduction, About section for personal info, Projects section to display work, and a Contact section for user interaction.
+The project is a dynamic portfolio website for Tanmay Patil, showcasing his skills and projects in AI, Data Science, and mobile development. It features a modern design with smooth animations, interactive elements, and sections dedicated to personal information, education, skills, and project showcases. The portfolio aims to highlight Tanmay's expertise and contributions in various fields, including automation and web technologies.
 
 # Project Module Description
-- **Hero Section**: Animated introduction with dynamic text and interactive elements.
-- **About Section**: Brief biography with animated statistics.
-- **Projects Section**: Showcase of projects with interactive cards and hover effects.
-- **Contact Section**: Functional contact form with validation and social media links.
+- **Hero Section**: Engaging introduction with animated text and links to social profiles.
+- **About Section**: Overview of personal background, education, skills, and technology stack.
+- **Projects Section**: Display of featured projects with descriptions, technologies used, and links to live demos and source code.
+- **Experience Section**: Detailed account of professional experiences, internships, and leadership roles.
+- **Contact Section**: Functional contact form for inquiries and interactions.
 - **Footer**: Quick links and copyright information.
 
 # Directory Tree
@@ -44,7 +45,7 @@ shadcn-ui/
 - **index.html**: Entry point of the application.
 - **src/App.tsx**: Main application component that sets up routing and context providers.
 - **src/pages/**: Contains page components for different sections of the portfolio.
-- **src/components/**: Contains reusable UI components.
+- **src/components/**: Contains reusable UI components including Hero, About, Projects, Experience, and Contact sections.
 - **src/styles/**: Contains global and component-specific styles.
 - **src/lib/**: Contains utility functions and animations for the project.
 - **src/hooks/**: Custom hooks for managing state and effects.
