Enhanced UI/UX animations.

--- a/.wiki.md
+++ b/.wiki.md
@@ -1,12 +1,12 @@
 # Project Summary
-The project is a dynamic portfolio website for Tanmay Patil, showcasing his skills and projects in AI, Data Science, and mobile development. It features a modern design with smooth animations, interactive elements, and sections dedicated to personal information, education, skills, and project showcases. The portfolio aims to highlight Tanmay's expertise and contributions in various fields, including automation and web technologies.
+The project is a dynamic portfolio website for Tanmay Patil, designed to showcase his expertise in AI, Data Science, and mobile development. It features a visually appealing layout with smooth animations and interactive elements, highlighting his skills, education, and project contributions. The portfolio aims to present Tanmay's professional journey and capabilities in automation and web technologies.
 
 # Project Module Description
-- **Hero Section**: Engaging introduction with animated text and links to social profiles.
+- **Hero Section**: Engaging introduction with animated text, social profile links, and a prominent display of Tanmay's photo.
 - **About Section**: Overview of personal background, education, skills, and technology stack.
-- **Projects Section**: Display of featured projects with descriptions, technologies used, and links to live demos and source code.
-- **Experience Section**: Detailed account of professional experiences, internships, and leadership roles.
-- **Contact Section**: Functional contact form for inquiries and interactions.
+- **Projects Section**: Display of featured projects with descriptions, technologies used, and links to demos and source code.
+- **Experience Section**: Detailed account of professional experiences and internships.
+- **Contact Section**: Functional contact form for inquiries.
 - **Footer**: Quick links and copyright information.
 
 # Directory Tree
@@ -21,6 +21,8 @@ shadcn-ui/
 ├── public/                 # Public assets
 │   ├── favicon.svg         # Favicon for the website
 │   └── robots.txt          # Robots.txt for SEO
+│   └── assets/             # Directory for asset files
+│       └── tanmay-photo.jpeg # Tanmay's profile photo
 ├── src/                    # Source files
 │   ├── App.css             # Global styles
 │   ├── App.tsx             # Main application component
