Build error resolved ```

--- a/.wiki.md
+++ b/.wiki.md
@@ -1,5 +1,6 @@
+```markdown
 # Project Summary
-The project is a dynamic portfolio website for Tanmay Patil, designed to showcase his expertise in AI, Data Science, and mobile development. It features a visually appealing layout with smooth animations and interactive elements, highlighting his skills, education, and project contributions. The portfolio aims to present Tanmay's professional journey and capabilities in automation and web technologies.
+The project is a dynamic portfolio website for Tanmay Patil, showcasing his expertise in AI, Data Science, and mobile development. It features a visually appealing layout with smooth animations and interactive elements, highlighting his skills, education, and project contributions. The portfolio aims to present Tanmay's professional journey and capabilities in automation and web technologies.
 
 # Project Module Description
 - **Hero Section**: Engaging introduction with animated text, social profile links, and a prominent display of Tanmay's photo.
